// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header Component > renders with navigation data and matches snapshot 1`] = `
<header
  class="sticky top-0 z-50 w-full bg-foreground shadow-sm"
>
  <nav
    class="container mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
  >
    <div
      class="flex items-center justify-between h-16 md:h-20"
    >
      <div
        class="flex items-center gap-4"
      >
        <div
          class="relative h-10 w-10 sm:h-12 sm:w-12 md:h-14 md:w-14 overflow-hidden rounded-full"
        >
          <img
            alt="China Sanda Club logo"
            src="/logo.jpeg"
          />
        </div>
        <a
          class="space-x-2 font-bold "
          href="/"
        >
          <div
            class="text-2xl display font-bold text-background"
          >
            <span>
              China Sanda Club
            </span>
          </div>
        </a>
      </div>
      <div
        class="hidden lg:flex items-center space-x-1 lg:space-x-2"
      >
        <a
          class="flex flex-col px-1 md:px-2 lg:px-3 xl:px-4 py-2 nav-link nav-link-active"
          href="/"
        >
          <span>
            Home
          </span>
        </a>
        <a
          class="flex flex-col px-1 md:px-2 lg:px-3 xl:px-4 py-2 nav-link "
          href="/classes"
        >
          <span>
            Classes
          </span>
        </a>
        <a
          class="flex flex-col px-1 md:px-2 lg:px-3 xl:px-4 py-2 nav-link "
          href="/contact"
        >
          <span>
            Contact
          </span>
        </a>
        <a
          class="px-6 py-3 ml-4 btn-primary display hidden md:inline-block"
          href="/contact?interest=trial"
        >
          Book A Trial
        </a>
      </div>
      <button
        aria-expanded="false"
        aria-label="Toggle mobile menu"
        class="lg:hidden p-2 btn-secondary"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="h-6 w-6"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </nav>
</header>
`;

exports[`Header Component > renders with null navigation data and matches snapshot 1`] = `
<header
  class="sticky top-0 z-50 w-full bg-foreground shadow-sm"
>
  <nav
    class="container mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
  >
    <div
      class="flex items-center justify-between h-16 md:h-20"
    >
      <div
        class="flex items-center gap-4"
      >
        <div
          class="relative h-10 w-10 sm:h-12 sm:w-12 md:h-14 md:w-14 overflow-hidden rounded-full"
        >
          <img
            alt="China Sanda Club logo"
            src="/logo.jpeg"
          />
        </div>
        <a
          class="space-x-2 font-bold "
          href="/"
        >
          <div
            class="text-2xl display font-bold text-background"
          >
            <span>
              China Sanda Club
            </span>
          </div>
        </a>
      </div>
      <div
        class="hidden lg:flex items-center space-x-1 lg:space-x-2"
      >
        <a
          class="px-6 py-3 ml-4 btn-primary display hidden md:inline-block"
          href="/contact?interest=trial"
        >
          Book A Trial
        </a>
      </div>
      <button
        aria-expanded="false"
        aria-label="Toggle mobile menu"
        class="lg:hidden p-2 btn-secondary"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="h-6 w-6"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </nav>
</header>
`;
